fix(web): make copy-component overflow: auto opt-in

--- a/packages/web/src/app/shared/copy/copy.component.scss
+++ b/packages/web/src/app/shared/copy/copy.component.scss
@@ -2,9 +2,11 @@
   cursor: pointer;
   transition: scale 0.2s ease-in-out;
   display: inline-block;
-  overflow: auto;
   max-width: 100%;
   vertical-align: top;
+  &.auto-overflow {
+    overflow: auto;
+  }
 }
 
 //only use this is the user allows motion
